added 2 point generation, randomise

--- a/index.html
+++ b/index.html
@@ -16,11 +16,18 @@
         <div class="lower">
             <div class="container"></div>
             <div class="tools">
-                <p class="sizeText">50x50 Px</p>
-                <input class='size' type="range" min="1" max="100" value="50" class="slider" id="myRange">
+                <div>
+                    <p class="sizeText">10x10 Px</p>
+                </div>
+                <div>
+                    <input class='size' type="range" min="1" max="100" value="10" class="slider" id="myRange">
+                </div>
                 <button class="setSize">Set Canvas Size</button>
                 <button class="clear">Clear</button>
-                <button class="randomise">Randomise</button>
+                <div>
+                    <button class="randomise">Randomise</button>
+                    <button class="start">Start</button>
+                </div>
                 <div class="colorpalette">
                     <p>Color picker</p>
                     <input id="colorPicker" type="color" value="#333333" />
