--- a/index.html
+++ b/index.html
@@ -20,13 +20,14 @@
                     <p class="sizeText">10x10 Px</p>
                 </div>
                 <div>
-                    <input class='size' type="range" min="1" max="100" value="10" class="slider" id="myRange">
+                    <input class='size' type="range" min="4" max="100" value="10" class="slider" id="myRange">
                 </div>
                 <button class="setSize">Set Canvas Size</button>
                 <button class="clear">Clear</button>
                 <div>
                     <button class="randomise">Randomise</button>
                     <button class="start">Start</button>
+                    <button class="BFS">BFS</button>
                 </div>
                 <div class="colorpalette">
                     <p>Color picker</p>
